# agate

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  ARCHITECTURE  AUTHORS  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  COPYING  MANIFEST.in  README  README.md  README.rst  README.txt  charts.py  example.py  example.py.ipynb  exonerations.py  pyproject.toml  release_process.md  requirements-py2.txt  requirements-py3.txt  requirements.txt  scratch.py  setup.cfg  setup.py  tox.ini  tutorial.ipynb
.github/: CONTRIBUTING.md
agate/: __init__.py  aggregations.py  aggregators.py  analysis.py  column_types.py  columns.py  computations.py  config.py  configure.py  csv_py2.py  csv_py3.py  exceptions.py  fixed.py  inference.py  mapped_sequence.py  parallel.py  preview.py  rows.py  table.py  tableset.py  testcase.py  threads.py  type_tester.py  utils.py  warns.py
benchmarks/: test_compute.py  test_joins.py
cookbooks/: Agate+Pandas.ipynb
docs/: Makefile  about.rst  api.rst  conf.py  contributing.rst  cookbook.rst  extensions.rst  index.rst  install.rst  release_process.rst  tutorial.rst
examples/: test.csv  test.json  testKey.json  test_cr.csv  test_crlf.csv  test_csv_sniff.csv  test_from_json_ambiguous.json  test_key.json  test_keyed.json  test_mixed.json  test_nested.json  test_newline.json  test_no_header.csv  test_non_string_keyed.json  test_quote_nonnumeric.csv  test_ragged_rows.csv  test_tableset.json  test_unicode_delimiter.csv
journalism/: .table.py.swp  __init__.py  aggregators.py  column.py  column_types.py  columns.py  computations.py  computers.py  exceptions.py  rows.py  table.py  tableset.py  utils.py
tests/: .test_table.py.swp  __init__.py  test_agate.py  test_aggregations.py  test_aggregators.py  test_analysis.py  test_column_types.py  test_columns.py  test_computations.py  test_computers.py  test_data_types.py  test_fixed.py  test_from_json.py  test_inference.py  test_journalism.py  test_mapped_sequence.py  test_py2.py  test_py3.py  test_rows.py  test_table.py  test_tableset.py  test_type_tester.py  test_utils.py  testcase.py
(+221 files in other folders)
